--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "firebase": "^10.12.5",
     "framer-motion": "^11.11.11",
+    "git-filter-repo": "^0.0.30",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.484.0",
     "react": "^18.3.1",
